MAINT: Update NOTE and Docker file